- CS 496 CoolPix work. Almost done

--- a/CS_496/CoolPix/android/app/src/main/res/layout/activity_cool_pix.xml
+++ b/CS_496/CoolPix/android/app/src/main/res/layout/activity_cool_pix.xml
@@ -10,17 +10,19 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ListView
-            android:background="@color/colorMainBack"
             android:id="@+id/picList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true" />
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/linearLayout"
+            android:layout_alignParentStart="true"
+            android:background="@color/colorMainBack" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +30,8 @@
             android:layout_alignParentBottom="true"
             android:orientation="horizontal"
             android:background="@color/colorToolsbackground"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/linearLayout">
 
             <Button
                 android:id="@+id/button_refresh"
